--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2
+version: 2.1
 workflows:
    version: 2
    hourly:
      triggers:
        - schedule:
-           cron: "0 0 0/6 ? * * *"
+           cron: "0 0 0,6,12,18 * *"
            filters:
              branches:
                only:
