trying new cron

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
    hourly:
      triggers:
        - schedule:
-           cron: "0 0 0,6,12,18 * *"
+           cron: "0 * * * *"
            filters:
              branches:
                only:
